--- a/quickstart/src/components/input/styles.css
+++ b/quickstart/src/components/input/styles.css
@@ -1,5 +1,5 @@
 .search__text {
-  width: 245px;
+  width: 230px;
   height: 50px;
   border: 1px solid #FAFAFA;
   border-radius: 3px;
@@ -7,4 +7,29 @@
   text-indent: 40px;
   background: url('../../assets/search.svg') no-repeat 10px 17px white;
   box-shadow: 0px 5.5px 5px rgba(0, 0, 0, 0.24), 0px 9px 18px rgba(0, 0, 0, 0.18);
+}
+
+.search__submit {
+  width: 80px;
+  height: 52px;
+  margin-left: 10px;
+  border: none;
+  border-radius: 4px;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: #FAFAFA;
+  box-shadow: 0px 5.5px 5px rgba(0, 0, 0, 0.24), 0px 9px 18px rgba(0, 0, 0, 0.18);
+  font-size: 14px;
+  outline: none;
+  cursor: pointer;
+  transition: box-shadow .3s;
+}
+
+.search__submit:hover,
+.search__submit:focus {
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
+}
+
+.search__submit:active {
+  box-shadow: 0 0 11px rgba(33,33,33,.2); 
 }
