--- a/quickstart/src/components/well-file/styles.css
+++ b/quickstart/src/components/well-file/styles.css
@@ -1,5 +1,5 @@
 .well__data {
-  padding: 20px;
+  padding: 20px 0;
 }
 
 .well__filetype {
@@ -66,23 +66,3 @@
   background: #4286f4;
 }
 
-.well__visualize {
-  position: absolute;
-  width: 287px;
-  height: 44px;
-  left: 0;
-  bottom: 0;
-  background: linear-gradient(0deg, #4285F4, #4285F4);
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.24), 0px 0px 2px rgba(0, 0, 0, 0.12);
-  border: none;
-  font-size: 14px;
-  line-height: 16px;
-  text-align: center;
-  letter-spacing: 0.0357143em;
-  color: #FFFFFF;
-  cursor: pointer;
-}
-
-.well__visualize:hover {
-  background: rgb(40, 119, 247);
-}
