--- a/quickstart/src/components/hint/styles.css
+++ b/quickstart/src/components/hint/styles.css
@@ -1,8 +1,9 @@
 .hint {
+  flex: 1;
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
+  text-align: center;
 }
 
 .message {
