--- a/quickstart/src/components/loader/styles.css
+++ b/quickstart/src/components/loader/styles.css
@@ -1,54 +1,62 @@
+.loader {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+}
+
 .loader__component {
   background: currentcolor;
   position: relative;
   -webkit-animation: loader__component 1s ease-in-out infinite;
-          animation: loader__component 1s ease-in-out infinite;
+  animation: loader__component 1s ease-in-out infinite;
   -webkit-animation-delay: 0.4s;
-          animation-delay: 0.4s;
-  width: .30em;
-  height: .6em;
-  margin: 1em 9em;
+  animation-delay: 0.4s;
+  width: 0.25em;
+  height: 1.25em;
   background: #4286f4;
 }
 
-.loader__component:after, .loader__component:before {
+.loader__component:after,
+.loader__component:before {
   content: '';
   position: absolute;
   width: inherit;
   height: inherit;
   background: #4286f4;
   -webkit-animation: inherit;
-          animation: inherit;
+  animation: inherit;
 }
 
 .loader__component:before {
-  right: .5em;
+  right: 0.5em;
   -webkit-animation-delay: 0.2s;
-          animation-delay: 0.2s;
+  animation-delay: 0.2s;
 }
 
 .loader__component:after {
-  left: .5em;
+  left: 0.5em;
   -webkit-animation-delay: 0.6s;
-          animation-delay: 0.6s;
+  animation-delay: 0.6s;
 }
 
 @-webkit-keyframes loader__component {
   0%,
-	100% {
+  100% {
     box-shadow: 0 0 0 #4286f4, 0 0 0 #4286f4;
   }
   50% {
-    box-shadow: 0 -.25em 0 #4286f4, 0 .25em 0 #4286f4;
+    box-shadow: 0 -0.25em 0 #4286f4, 0 0.25em 0 #4286f4;
   }
 }
 
 @keyframes loader__component {
   0%,
-	100% {
+  100% {
     box-shadow: 0 0 0 #4286f4, 0 0 0 #4286f4;
   }
   50% {
-    box-shadow: 0 -.25em 0 #4286f4, 0 .25em 0 #4286f4;
+    box-shadow: 0 -0.25em 0 #4286f4, 0 0.25em 0 #4286f4;
   }
 }
